fix: [PL-32774]: Fix overlapping of dropdown in manage roles modal (#16565)
* fix: [PL-32774]: Fix overlapping of dropdown in manage roles modal

* fix: added border and box-shadow

--- a/src/modules/20-rbac/modals/RoleAssignmentModal/views/RoleAssignmentForm.module.scss
+++ b/src/modules/20-rbac/modals/RoleAssignmentModal/views/RoleAssignmentForm.module.scss
@@ -24,6 +24,14 @@
   width: inherit;
   overflow-wrap: anywhere;
   height: 0px;
+  max-width: 300px;
+
+  :global {
+    .bp3-menu {
+      border: 0.5px solid rgba(0, 0, 0, 0.1);
+      box-shadow: 0px 0px 1px rgb(40 41 61 / 4%), 0px 2px 4px rgb(96 97 112 / 16%);
+    }
+  }
 }
 
 .userName {
